[package]
name = "apex-rs-vanilla"
version = "0.1.0"
edition = "2021"
authors = [
  "Wanja Zaeske <wanja.zaeske@dlr.de>",
  "Sven Friedrich <sven.friedrich@dlr.de>"
]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "*"
apex-rs = { git = "https://github.com/aeronautical-informatics/apex-rs.git", features = ["strum"] }
